@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: T08RunAction.cc,v 1.1 1999-01-08 16:35:21 gunter Exp $
+// $Id: T08RunAction.cc,v 1.2 1999-04-17 07:24:04 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -26,9 +26,9 @@ T08RunAction::~T08RunAction()
 {
 }
 
-void T08RunAction::BeginOfRunAction(G4Run* aRun)
+void T08RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(runIDcounter++);
+  ((G4Run*)(aRun))->SetRunID(runIDcounter++);
    
   G4cout << "### Run " << aRun->GetRunID() << " start." << endl;
 
@@ -46,7 +46,7 @@ void T08RunAction::BeginOfRunAction(G4Run* aRun)
 
 
 
-void T08RunAction::EndOfRunAction(G4Run* aRun)
+void T08RunAction::EndOfRunAction(const G4Run* )
 {
   G4VVisManager* pVVisManager = G4VVisManager::GetConcreteInstance();
   
