@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:13 gunter Exp $
+$Id: History,v 1.2 1999-04-17 07:23:55 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in T08PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in T08RunAction
+- Modify UserSteppingAction() in T08SteppingAction
 
 September 31, 98 G.Barrand
 - "standardize" the test ; do the prerun in test08.in, 
